[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "http_request_recorder"
version = "0.0.1"
readme = 'README.md'
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
description = 'A package to record an respond to http requests, primarily for use in black box testing.'
dependencies = [
    'aiohttp~=3.8.4',
]