[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "http_request_recorder"
version = "2.0.0"
authors = []
description = "A package to record an respond to http requests, primarily for use in end-to-end testing."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    'aiohttp~=3.10.10',
]

[project.urls]
Homepage = "https://github.com/sipgate/http-request-recorder"
Issues = "https://github.com/sipgate/http-request-recorder/issues"

[tool.setuptools.package-data]
"http_request_recorder" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["http_request_recorder"]

[tool.autopep8]
max_line_length = 200

[tool.ruff]
line-length = 200